--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -58,21 +58,11 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"  >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_gravity="top"
 
+        >
 
     </android.support.v4.view.ViewPager>
-
-        <android.inputmethodservice.KeyboardView
-            android:background="@color/colorPrimary"
-            android:id="@+id/keyboardview"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:keyBackground="@color/colorPrimary"
-            android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
