--- a/app/src/main/res/layout/fragment_amharic_list.xml
+++ b/app/src/main/res/layout/fragment_amharic_list.xml
@@ -10,25 +10,53 @@
     app:layout_scrollFlags="scroll|enterAlways"
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/search_view_border"
+
+            >
+
+           <ImageView
+               android:gravity="center_vertical"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="left|center_vertical"
+               android:src="@android:drawable/ic_menu_search"
+               android:layout_marginLeft="5dp"/>
+
+        <EditText
+            android:id="@+id/inputSearch_amh"
+            android:layout_gravity="right"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:hint="እዚህ ፈልግ.."
+            android:paddingLeft="10dp"
+            android:minLines="5"
+            android:textSize="17dp"
+            android:lines="3"
+            android:inputType="textVisiblePassword"
+            />
+        </LinearLayout>
+<!--
         <SearchView
             android:id="@+id/search_view_amharic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/search_view_border"
             android:iconifiedByDefault="false"
-            android:padding="2dp"/>
+            android:padding="2dp"/>-->
 
-        <EditText
-            android:inputType="text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ed_amharic"
-            android:text="Search here"/>
 
         <ListView
             android:id="@+id/lv_amharic"
@@ -42,5 +70,20 @@
         </ListView>
 
     </LinearLayout>
+
+
+    <android.inputmethodservice.KeyboardView
+        android:background="@color/colorPrimary"
+        android:id="@+id/keyboardview"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:keyBackground="@color/colorPrimary"
+        android:visibility="gone" />
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
