--- a/app/src/main/res/layout/fragment_english_list.xml
+++ b/app/src/main/res/layout/fragment_english_list.xml
@@ -14,17 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <!--android:background="#ffeeee" -->
-
-<!--        <SearchView
-            android:background="@drawable/back"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/search_view_english"
-            android:textColor = "#fff"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"/>-->
-
+<!--
         <SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
@@ -32,7 +22,38 @@
             android:background="@drawable/search_view_border"
             android:iconifiedByDefault="false"
             android:padding="2dp"
-            android:queryHint="Search...." />
+            android:queryHint="Search...." />-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:background="@drawable/search_view_border"
+
+            >
+
+            <ImageView
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:src="@android:drawable/ic_menu_search"
+                android:layout_marginLeft="5dp"/>
+
+            <EditText
+                android:id="@+id/inputSearch_eng"
+                android:layout_gravity="right"
+                android:layout_width="fill_parent"
+                android:layout_height="40dp"
+                android:hint="Search here.."
+                android:paddingLeft="10dp"
+                android:minLines="5"
+                android:textSize="17dp"
+                android:lines="3"
+                android:inputType="textVisiblePassword"
+                />
+        </LinearLayout>
 
         <ListView
             android:id="@+id/lv_english"
