--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorSecondary">#303F9F</color>
 
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3eb1c8</color>
     <color name="white">#fff</color>
 
     <color name="primary_dark">#388E3C</color>
