--- a/app/src/main/res/xml/kbd.xml
+++ b/app/src/main/res/xml/kbd.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
     android:keyWidth="12.50%p"
-    android:keyHeight="10%p">
+    android:keyHeight="8.5%p">
 
     <Row>
         <Key android:codes="1000"    android:keyLabel="ሀ" android:keyEdgeFlags="left"  android:popupKeyboard="@xml/popup" android:popupCharacters="ሀሁሂሃሄህሆ" />
@@ -47,11 +47,13 @@
 
     <Row>
         <Key android:codes="1330"    android:keyLabel="ፐ" android:keyEdgeFlags="left" android:popupKeyboard="@xml/popup" android:popupCharacters="ፐፑፒፓፔፕፖ"/>
-        <Key android:codes="1400"    android:keyLabel="፡" />
-        <Key android:codes="56"    android:keyLabel="" android:keyWidth="30%p"  />
-        <Key android:codes="-5"    android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true" android:horizontalGap="3.25%p" />
-        <Key android:codes="55002" android:keyIcon="@drawable/sym_keyboard_left" android:isRepeatable="true"  android:horizontalGap="1.25%p" />
-        <Key android:codes="55003" android:keyIcon="@drawable/sym_keyboard_right" android:isRepeatable="true" />
+        <Key android:codes="1400"    android:keyLabel=":" />
+        <Key android:codes="56"    android:keyLabel="" android:keyWidth="25%p"  />
+        <Key android:codes="-5"    android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true" android:horizontalGap="2.0%p" />
+        <Key android:codes="55002" android:keyIcon="@drawable/sym_keyboard_left" android:isRepeatable="true" />
+        <Key android:codes="55003" android:keyIcon="@drawable/sym_keyboard_right" android:isRepeatable="true" android:horizontalGap="2.0%p" />
+        <Key android:codes="-3"    android:keyIcon="@drawable/sym_keyboard_done" android:keyEdgeFlags="right" android:horizontalGap="2.0%p"/>
+
     </Row>
 
 </Keyboard>
