--- a/app/src/main/res/layout/view_more.xml
+++ b/app/src/main/res/layout/view_more.xml
@@ -48,11 +48,13 @@
                         />
 
                     <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
-                        android:src="@android:drawable/ic_menu_mapmode"
+                        android:layout_marginTop="7dp"
+                        android:id="@+id/ib_copy"
+                        android:layout_width="40dp"
+                        android:layout_height="37dp"
+                        android:background="@drawable/copy_icon"
                         />
+
                 </LinearLayout>
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
