--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3eb1c8</color>
-    <color name="colorSecondary">#303F9F</color>
+    <color name="colorSecondary">#3399cc</color>
 
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#3399cc</color>
     <color name="colorAccent">#3eb1c8</color>
     <color name="white">#fff</color>
 
