splash, db and view more changes

--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:text="By BrainUp Tech"/>
+            android:text="BrainUp Software Technology"/>
 
     </LinearLayout>
 </LinearLayout>
