--- a/app/src/main/res/xml/kbd.xml
+++ b/app/src/main/res/xml/kbd.xml
@@ -58,8 +58,8 @@
 
     <Row>
         <Key android:codes="1330"    android:keyLabel="ፐ" android:keyEdgeFlags="left" android:popupKeyboard="@xml/popup" android:popupCharacters="ፐፑፒፓፔፕፖ"/>
-        <Key android:codes="1400"    android:keyLabel=":" />
-        <Key android:codes="56"    android:keyLabel="" android:keyWidth="25%p"  />
+        <Key android:codes="1400"   android:keyLabel=":"  />
+        <Key android:codes="1"   android:keyIcon="@drawable/space_icon" android:keyWidth="25%p"  />
         <Key android:codes="-5"    android:keyIcon="@drawable/sym_keyboard_delete" android:isRepeatable="true" android:horizontalGap="2.0%p" />
         <Key android:codes="55002" android:keyIcon="@drawable/sym_keyboard_left" android:isRepeatable="true" />
         <Key android:codes="55003" android:keyIcon="@drawable/sym_keyboard_right" android:isRepeatable="true" android:horizontalGap="2.0%p" />
