--- a/app/src/main/res/layout/single_layout_word.xml
+++ b/app/src/main/res/layout/single_layout_word.xml
@@ -37,6 +37,7 @@
                         android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="20dp"
+                        android:layout_marginRight="40dp"
                         >
 
                         <TextView
