english search search performance increase

--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -44,7 +44,8 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:textColor="#ffffff"
-                android:text="https://www.facebook.com/Brain-Up-Software-Technologies-110275605972090/"/>
+                android:textSize="16dp"
+                android:text="BrainUp on Facebook"/>
         </LinearLayout>
     </LinearLayout>
     <Button
