--- a/app/src/main/res/layout/fragment_english_list.xml
+++ b/app/src/main/res/layout/fragment_english_list.xml
@@ -2,6 +2,7 @@
 
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -66,7 +67,15 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
         </ListView>
 
-    </LinearLayout>
 
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_home_footer">
+        </com.google.android.gms.ads.AdView>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
