--- a/app/src/main/res/layout/view_more.xml
+++ b/app/src/main/res/layout/view_more.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
@@ -27,6 +28,10 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -94,13 +99,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:paddingTop="10dp"
-                    android:lines="6"
-                    android:maxLines="20"
+                    android:lines="3"
+                    android:maxLines="5"
                     android:textSize="20dp"
                     android:text="string/under_constraction"/>
 
             </android.support.v7.widget.CardView>
-
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -109,17 +113,22 @@
                 android:layout_marginRight="30dp"
                 app:cardUseCompatPadding="true"
                 >
-         <WebView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:id="@+id/webview_detail"
-             >
-
-         </WebView>
-
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
+
+            <com.google.android.gms.ads.NativeExpressAdView
+                android:layout_gravity="center"
+                android:id="@+id/adViewNative"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                ads:adUnitId="@string/ad_unit_id"
+                ads:adSize="320x150">
+            </com.google.android.gms.ads.NativeExpressAdView>
+
+
+        </LinearLayout>
+
 
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
