--- a/app/src/main/res/layout/adview.xml
+++ b/app/src/main/res/layout/adview.xml
@@ -7,8 +7,8 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_gravity="center|center_horizontal"
-        android:gravity="center|center_horizontal"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:gravity="center_vertical|center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
